Move logback-android/src into project root (2)

--- a/gradle.properties
+++ b/gradle.properties
@@ -26,6 +26,9 @@ VERSION_NAME=1.3.0-4-SNAPSHOT
 VERSION_CODE=301303
 GROUP=com.github.tony19
 
+POM_NAME=logback-android
+POM_ARTIFACT_ID=logback-android
+POM_PACKAGING=aar
 POM_DESCRIPTION="Logging library for Android apps"
 POM_URL=https://github.com/tony19/logback-android
 POM_SCM_URL=https://github.com/tony19/logback-android
