--- a/gradle/deploy.gradle
+++ b/gradle/deploy.gradle
@@ -1,20 +1,5 @@
-/*
- * Copyright 2013 Chris Banes
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *     http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
 apply plugin: 'maven'
-apply plugin: 'signing'
+apply plugin: 'maven-publish'
 apply plugin: 'com.jfrog.bintray'
 
 bintray {
@@ -26,7 +11,7 @@ bintray {
     override = true
 
     pkg {
-        repo = 'generic'
+        repo = 'maven'
         name = "${GROUP}:${POM_NAME}"
         desc = POM_DESCRIPTION
         // TODO: Use license config from gradle.properties when ready to switch to Apache License.
@@ -37,6 +22,7 @@ bintray {
         issueTrackerUrl = POM_SCM_ISSUES_URL
         vcsUrl = POM_SCM_URL
         githubRepo = POM_SCM_URL
+        githubReleaseNotesFile = 'README.md'
 
         version {
             name = VERSION_NAME
@@ -45,106 +31,103 @@ bintray {
             gpg {
                 sign = true
             }
+//            mavenCentralSync {
+//                sync = true
+//                user = 'tony19'
+//                password = 'paasword' //OSS user password: mandatory
+//                close = '0' //1 = staging repository is closed and artifacts are released to Maven Central. 0 = release the version manually
+//            }
         }
     }
 }
 
-def isReleaseBuild() {
-    return !VERSION_NAME.contains("SNAPSHOT")
-}
+publishing {
+    publications {
+        MyPublication(MavenPublication) {
 
-def getReleaseRepositoryUrl() {
-    return hasProperty('RELEASE_REPOSITORY_URL') ? RELEASE_REPOSITORY_URL
-            : 'https://oss.sonatype.org/service/local/staging/deploy/maven2/'
-}
+            pom {
+                name = POM_NAME
+                packaging = POM_PACKAGING
+                description = POM_DESCRIPTION
+                url = POM_URL
 
-def getSnapshotRepositoryUrl() {
-    return hasProperty('SNAPSHOT_REPOSITORY_URL') ? SNAPSHOT_REPOSITORY_URL
-            : 'https://oss.sonatype.org/content/repositories/snapshots/'
-}
-
-def getRepositoryUsername() {
-    return hasProperty('NEXUS_USERNAME') ? NEXUS_USERNAME : ''
-}
-
-def getRepositoryPassword() {
-    return hasProperty('NEXUS_PASSWORD') ? NEXUS_PASSWORD : ''
-}
-
-afterEvaluate { project ->
-    uploadArchives {
-        repositories {
-            mavenDeployer {
-                beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
-
-                pom.groupId = GROUP
-                pom.artifactId = POM_ARTIFACT_ID
-                pom.version = VERSION_NAME
-
-                repository(url: getReleaseRepositoryUrl()) {
-                    authentication(userName: getRepositoryUsername(), password: getRepositoryPassword())
-                }
-                snapshotRepository(url: getSnapshotRepositoryUrl()) {
-                    authentication(userName: getRepositoryUsername(), password: getRepositoryPassword())
+                scm {
+                    url = POM_SCM_URL
+                    connection = POM_SCM_CONNECTION
+                    developerConnection = POM_SCM_DEV_CONNECTION
                 }
 
-                pom.project {
-                    name POM_NAME
-                    packaging POM_PACKAGING
-                    description POM_DESCRIPTION
-                    url POM_URL
-
-                    scm {
-                        url POM_SCM_URL
-                        connection POM_SCM_CONNECTION
-                        developerConnection POM_SCM_DEV_CONNECTION
-                    }
-
-                    licenses {
+                licenses {
 // TODO: Use license config from gradle.properties when ready to switch to Apache License.
 //                        license {
 //                            name POM_LICENCE_NAME
 //                            url POM_LICENCE_URL
 //                            distribution POM_LICENCE_DIST
 //                        }
-                        license {
-                            name 'Eclipse Public License, Version 1.0'
-                            url 'https://www.eclipse.org/legal/epl-v10.html'
-                            distribution POM_LICENCE_DIST
-                        }
-                        license {
-                            name 'GNU Lesser General Public License, Version 2.1'
-                            url 'http://www.gnu.org/licenses/lgpl-2.1.html'
-                            distribution POM_LICENCE_DIST
-                        }
+                    license {
+                        name = 'Eclipse Public License, Version 1.0'
+                        url = 'https://www.eclipse.org/legal/epl-v10.html'
+                        distribution = POM_LICENCE_DIST
                     }
+                    license {
+                        name = 'GNU Lesser General Public License, Version 2.1'
+                        url = 'http://www.gnu.org/licenses/lgpl-2.1.html'
+                        distribution = POM_LICENCE_DIST
+                    }
+                }
 
-                    developers {
-                        developer {
-                            id POM_DEVELOPER_ID
-                            name POM_DEVELOPER_NAME
-                            email POM_DEVELOPER_EMAIL
-                        }
+                developers {
+                    developer {
+                        id = POM_DEVELOPER_ID
+                        name = POM_DEVELOPER_NAME
+                        email = POM_DEVELOPER_EMAIL
+                    }
+                }
+            }
+
+            pom.withXml {
+                // Iterate over the implementation dependencies (we don't want the test ones), adding a <dependency> node for each
+                configurations.implementation.allDependencies.each {
+                    // Ensure dependencies such as fileTree are not included.
+                    if (it.name != 'unspecified') {
+                        def dependencyNode = dependenciesNode.appendNode('dependency')
+                        dependencyNode.appendNode('groupId', it.group)
+                        dependencyNode.appendNode('artifactId', it.name)
+                        dependencyNode.appendNode('version', it.version)
                     }
                 }
             }
         }
     }
-
-    signing {
-        required { isReleaseBuild() && gradle.taskGraph.hasTask("uploadArchives") }
-        sign configurations.archives
-    }
-
-    task androidSourcesJar(type: Jar) {
-        classifier = 'sources'
-        from android.sourceSets.main.java.sourceFiles
-    }
-
-    artifacts {
-        archives androidSourcesJar
-
-        // see docs.gradle
-        archives androidJavadocsJar
-    }
 }
+//
+//install {
+//    repositories.mavenInstaller {
+//        pom {
+//            project {
+//                packaging 'aar'
+//                name POM_NAME
+//                url POM_URL
+//                licenses {
+//                    license {
+//                        name 'The Apache Software License, Version 2.0'
+//                        url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+//                    }
+//                }
+//                developers {
+//                    developer {
+//                        id POM_DEVELOPER_ID
+//                        name POM_DEVELOPER_NAME
+//                        email POM_DEVELOPER_EMAIL
+//                    }
+//                }
+//                scm {
+//                    connection POM_SCM_CONNECTION
+//                    developerConnection POM_SCM_DEV_CONNECTION
+//                    url POM_SCM_URL
+//
+//                }
+//            }
+//        }
+//    }
+//}
