--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ buildscript {
     classpath 'org.ajoberstar:grgit:2.1.1'
     classpath 'com.novoda:gradle-static-analysis-plugin:0.5.1'
     classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
+    classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
 
     // NOTE: Do not place your application dependencies here; they belong
     // in the individual module build.gradle files
@@ -35,6 +36,8 @@ allprojects {
     jcenter()
     maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
   }
+  apply plugin: 'com.android.library'
+  apply plugin: 'com.github.dcendents.android-maven'
 }
 
 android {
@@ -147,4 +150,38 @@ release {
 
 nexusStaging {
   packageGroup = 'com.github.tony19'
+}
+
+install {
+  repositories.mavenInstaller {
+    pom.project {
+      name "${GROUP}:${POM_NAME}"
+      description POM_DESCRIPTION
+      url POM_URL
+
+      packaging 'aar'
+      groupId GROUP
+      artifactId POM_ARTIFACT_ID
+      version VERSION_NAME
+
+      licenses {
+        license {
+          name 'The Apache Software License, Version 2.0'
+          url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+          distribution 'repo'
+        }
+      }
+      scm {
+        connection POM_SCM_CONNECTION
+        url POM_SCM_URL
+
+      }
+      developers {
+        developer {
+          name POM_DEVELOPER_NAME
+          email POM_DEVELOPER_EMAIL
+        }
+      }
+    }
+  }
 }
