Add javadocs and sources jars to bintray

--- a/build.gradle
+++ b/build.gradle
@@ -184,3 +184,16 @@ install {
     }
   }
 }
+
+
+task sourcesJar(type: Jar) {
+  from android.sourceSets.main.java.srcDirs
+  classifier = 'sources'
+}
+
+afterEvaluate { project ->
+  artifacts {
+    archives androidJavadocsJar
+    archives sourcesJar
+  }
+}
