--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,9 @@ apply from: 'gradle/readme.gradle'
 
 apply plugin: 'com.android.library'
 apply plugin: 'com.github.dcendents.android-maven'
+
+project.archivesBaseName = POM_ARTIFACT_ID
+
 apply from: "${rootProject.projectDir}/gradle/analysis.gradle"
 apply from: "${rootProject.projectDir}/gradle/docs.gradle"
 apply from: "${rootProject.projectDir}/gradle/deploy.gradle"
