--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,8 @@ buildscript {
     classpath 'com.android.tools.build:gradle:3.2.1'
     classpath 'org.ajoberstar:grgit:2.1.1'
     classpath 'com.novoda:gradle-static-analysis-plugin:0.5.1'
-    classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
+    classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
+    classpath 'digital.wup:android-maven-publish:3.6.2'
 
     // NOTE: Do not place your application dependencies here; they belong
     // in the individual module build.gradle files
