--- a/logback-android/build.gradle
+++ b/logback-android/build.gradle
@@ -2,17 +2,12 @@ plugins {
     id 'net.researchgate.release' version '2.6.0'
 }
 apply plugin: 'com.android.library'
-apply from: "${rootProject.projectDir}/gradle/analysis.gradle"
-apply from: "${rootProject.projectDir}/gradle/docs.gradle"
-apply from: "${rootProject.projectDir}/gradle/deploy.gradle"
+apply plugin: 'com.jfrog.bintray'
+apply plugin: 'digital.wup.android-maven-publish'
 
 android {
+    buildToolsVersion '28.0.3'
     compileSdkVersion 28
-
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_5
-        targetCompatibility JavaVersion.VERSION_1_5
-    }
 
     defaultConfig {
         minSdkVersion 9
@@ -20,11 +15,9 @@ android {
         versionCode VERSION_CODE.toInteger()
         versionName VERSION_NAME
     }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_6
+        targetCompatibility JavaVersion.VERSION_1_6
     }
     lintOptions {
         checkAllWarnings true
@@ -33,52 +26,20 @@ android {
     testOptions {
         unitTests {
             includeAndroidResources = true
-
-            all {
-                testLogging {
-                    events 'failed'
-                    showStackTraces = true
-                    exceptionFormat = 'full'
-                }
-            }
         }
     }
-}
-
-dependencies {
-
-    testImplementation('junit:junit:4.12') {
-        exclude(module: 'hamcrest-core')
+    buildTypes {
+        debug {
+            minifyEnabled false
+            useProguard false
+            proguardFile(getDefaultProguardFile('proguard-android.txt'))
+        }
+        release {
+            minifyEnabled true
+            useProguard false
+            proguardFile(getDefaultProguardFile('proguard-android.txt'))
+        }
     }
-
-    testImplementation 'org.hamcrest:hamcrest-junit:2.0.0.0'
-    testImplementation 'org.robolectric:robolectric:4.0.2'
-    testImplementation 'org.mockito:mockito-core:2.23.4'
-    testImplementation 'joda-time:joda-time:2.10.1'
-
-    // This dep is required when using Robolectric and targeting pre-21 SDKs.
-    // Otherwise, tests fail with java.lang.NoClassDefFoundError.
-    // https://github.com/robolectric/robolectric/issues/2562#issuecomment-263086503
-    testImplementation 'org.robolectric:android-all:8.1.0-robolectric-r4458339'
-    testImplementation 'com.icegreen:greenmail:1.5.9'
-    testImplementation 'dom4j:dom4j:1.6.1'
-    testImplementation 'org.easytesting:fest-assert:1.4'
-    testImplementation "org.slf4j:integration:${slf4jVersion}"
-    testImplementation "org.slf4j:log4j-over-slf4j:${slf4jVersion}"
-    testImplementation "org.slf4j:slf4j-api:${slf4jVersion}:tests"
-    testImplementation "org.slf4j:slf4j-ext:${slf4jVersion}"
-    testImplementation(group: 'org.subethamail', name: 'subethasmtp', version: '3.1.7') {
-        exclude(module: 'slf4j-api')
-    }
-
-    compileOnly "org.slf4j:slf4j-api:${slf4jVersion}"
-
-    // For SMTPAppender
-    compileOnly 'com.sun.mail:android-mail:1.6.3'
-    compileOnly 'com.sun.mail:android-activation:1.6.3'
-
-    testImplementation 'ch.qos.cal10n:cal10n-api:0.8.1'
-    testAnnotationProcessor 'ch.qos.cal10n:cal10n-api:0.8.1'
 }
 
 allprojects {
@@ -114,6 +75,99 @@ release {
     }
 }
 
-nexusStaging {
-    packageGroup = 'com.github.tony19'
+dependencies {
+    testImplementation('junit:junit:4.12') {
+        exclude(module: 'hamcrest-core')
+    }
+
+    testImplementation 'org.hamcrest:hamcrest-junit:2.0.0.0'
+    testImplementation 'org.robolectric:robolectric:4.0.2'
+    testImplementation 'org.mockito:mockito-core:2.23.4'
+    testImplementation 'joda-time:joda-time:2.10.1'
+
+    // This dep is required when using Robolectric and targeting pre-21 SDKs.
+    // Otherwise, tests fail with java.lang.NoClassDefFoundError.
+    // https://github.com/robolectric/robolectric/issues/2562#issuecomment-263086503
+    testImplementation 'org.robolectric:android-all:8.1.0-robolectric-r4458339'
+    testImplementation 'com.icegreen:greenmail:1.5.9'
+    testImplementation 'dom4j:dom4j:1.6.1'
+    testImplementation 'org.easytesting:fest-assert:1.4'
+    testImplementation "org.slf4j:integration:${slf4jVersion}"
+    testImplementation "org.slf4j:log4j-over-slf4j:${slf4jVersion}"
+    testImplementation "org.slf4j:slf4j-api:${slf4jVersion}:tests"
+    testImplementation "org.slf4j:slf4j-ext:${slf4jVersion}"
+    testImplementation(group: 'org.subethamail', name: 'subethasmtp', version: '3.1.7') {
+        exclude(module: 'slf4j-api')
+    }
+
+    compileOnly "org.slf4j:slf4j-api:${slf4jVersion}"
+
+    // For SMTPAppender
+    compileOnly 'com.sun.mail:android-mail:1.6.3'
+    compileOnly 'com.sun.mail:android-activation:1.6.3'
+
+    testImplementation 'ch.qos.cal10n:cal10n-api:0.8.1'
+    testAnnotationProcessor 'ch.qos.cal10n:cal10n-api:0.8.1'
+}
+
+task generateSourcesJar(type: Jar) {
+    from android.sourceSets.main.java.srcDirs
+    classifier 'sources'
+    group = 'build'
+}
+
+task generateJavadoc(type: Javadoc) {
+    source = android.sourceSets.main.java.srcDirs
+    classpath += configurations.compile
+    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
+    failOnError false
+    group = 'build'
+}
+
+task generateJavadocJar(type: Jar) {
+    from generateJavadoc
+    classifier 'javadoc'
+    group = 'build'
+}
+
+publishing {
+    publications {
+        logbackAndroid(MavenPublication) {
+            from components.android
+            artifact generateJavadocJar
+            artifact generateSourcesJar
+
+            groupId GROUP
+            version VERSION_NAME
+        }
+    }
+}
+
+bintray {
+    user = BINTRAY_USER
+    key = BINTRAY_KEY
+    publications = ['logbackAndroid']
+
+    publish = false // true
+    override = true
+
+    pkg {
+        repo = 'maven'
+        name = "${GROUP}:${POM_NAME}"
+        licenses = ['EPL-1.0', 'LGPL-2.1']
+        labels = ['android', 'logging']
+        websiteUrl = POM_URL
+        issueTrackerUrl = POM_SCM_ISSUES_URL
+        vcsUrl = POM_SCM_URL
+        githubRepo = POM_SCM_URL
+
+        version {
+            name = VERSION_NAME
+            released  = new Date()
+            vcsTag = "v_${VERSION_NAME}"
+            gpg {
+                sign = true
+            }
+        }
+    }
 }
