--- a/gradle.properties
+++ b/gradle.properties
@@ -37,5 +37,5 @@ POM_LICENCE_ID="EPL-1.0"
 POM_LICENCE_URL=https://www.eclipse.org/legal/epl-v10.html
 POM_LICENCE_DIST=repo
 POM_DEVELOPER_ID=tony19
-POM_DEVELOPER_NAME=tony19
+POM_DEVELOPER_NAME="Anthony Trinh"
 POM_DEVELOPER_EMAIL=tony19@gmail.com
