--- a/logback-android/build.gradle
+++ b/logback-android/build.gradle
@@ -247,8 +247,8 @@ bintray {
             }
             mavenCentralSync {
                 sync = true
-                user = SONATYPE_USER
-                password = SONATYPE_PW
+                user = project.hasProperty('SONATYPE_USER') ? SONATYPE_USER : System.getenv('SONATYPE_USER')
+                password = project.hasProperty('SONATYPE_PW') ? SONATYPE_PW : System.getenv('SONATYPE_PW')
                 close = '0' //Optional property. By default the staging repository is closed and artifacts are released to Maven Central. You can optionally turn this behaviour off (by puting 0 as value) and release the version manually.
             }
         }
